tests/baselines/reference/usingDeclarations.16.errors.txt
usingDeclarations.16.ts(2,5): error TS1545: 'using' declarations are not allowed in ambient contexts.
usingDeclarations.16.ts(3,5): error TS1545: 'using' declarations are not allowed in ambient contexts.
usingDeclarations.16.ts(6,5): error TS1545: 'using' declarations are not allowed in ambient contexts.
usingDeclarations.16.ts(7,5): error TS1545: 'using' declarations are not allowed in ambient contexts.


==== usingDeclarations.16.ts (4 errors) ====
    declare namespace N {
        using x: { [Symbol.dispose](): void };
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1545: 'using' declarations are not allowed in ambient contexts.
        using y: null;
        ~~~~~~~~~~~~~
!!! error TS1545: 'using' declarations are not allowed in ambient contexts.
    }
    declare module 'M' {
        using x: { [Symbol.dispose](): void };
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1545: 'using' declarations are not allowed in ambient contexts.
        using y: null;
        ~~~~~~~~~~~~~
!!! error TS1545: 'using' declarations are not allowed in ambient contexts.
    }
    